--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="it" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
-        <title>Fake Google</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Quadratini</title>
         <script src="https://kit.fontawesome.com/7f25fd8a42.js" crossorigin="anonymous"></script>
         <!-- bootstrap 3-->
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
@@ -12,7 +12,35 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div class="container">
+            <div id="griglia">
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+                <div class="quadrato"></div>
+            </div>
+        </div>
 <!-- javascript e jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="main.js" charset="utf-8"></script>
