creata seconda griglia con jQuery

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <div class="container">
+            <h1>Griglia classica in html</h1>
             <div id="griglia">
                 <div class="quadrato"></div>
                 <div class="quadrato"></div>
@@ -39,6 +40,10 @@
                 <div class="quadrato"></div>
                 <div class="quadrato"></div>
                 <div class="quadrato"></div>
+            </div>
+            <h1>Griglia creata in jQuery</h1>
+            <div id="griglia2">
+
             </div>
         </div>
 <!-- javascript e jquery -->
